# socketWrapper

./: CMakeLists.txt  LICENSE  README.md  client.cpp  main.cpp
src/: ClientSocket.cpp  ClientSocket.h  IOSocket.cpp  IOSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
